[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/MainMenu/ExitAreaButton.gd" type="Script" id=1]
[ext_resource path="res://scripts/MainMenu/Menu.gd" type="Script" id=3]
[ext_resource path="res://scripts/MainMenu/MenuButton.gd" type="Script" id=4]
[ext_resource path="res://scripts/MainMenu/MainMenu.gd" type="Script" id=5]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.12549, 0.121569, 0.14902, 1 )

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 5 )

[node name="ExitAreaButton" type="Button" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 2 )
custom_styles/disabled = SubResource( 2 )
custom_styles/normal = SubResource( 2 )
script = ExtResource( 1 )

[node name="Menu" type="PopupPanel" parent="."]
anchor_bottom = 1.0
margin_right = 400.0
custom_styles/panel = SubResource( 1 )
script = ExtResource( 3 )

[node name="OptionSeparator" type="VBoxContainer" parent="Menu"]
margin_right = 400.0
margin_bottom = 1080.0
custom_constants/separation = 0

[node name="AppNameLabel" type="Label" parent="Menu/OptionSeparator"]
margin_right = 400.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 100 )
text = "DreamDeck"
align = 1
valign = 1

[node name="MenuButton" type="Button" parent="."]
margin_left = 20.0
margin_top = 20.0
margin_right = 80.0
margin_bottom = 80.0
rect_min_size = Vector2( 60, 60 )
script = ExtResource( 4 )

[connection signal="pressed" from="ExitAreaButton" to="ExitAreaButton" method="_on_ExitAreaButton_pressed"]
[connection signal="pressed" from="MenuButton" to="MenuButton" method="_on_MenuButton_pressed"]
